--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 h1 {
-  font-family: Helvetica;
-  font-size: 100px;
-  font-weight: bold;
-  color: khaki;
+  font-family: Verdana;
+  font-size: 50px;
+  font-weight: Normal;
+  color: white;
   text-align: center;
   position: static;
-  background: url("../pictures/pattern.jpeg");
+  }
+body {
+    background-color: black;
+  }
+h2 {
+  color: Aquamarine;
+  font-size: 16px;
+  text-align: center;
+  position: static;
 }
