--- a/style.css
+++ b/style.css
@@ -15,3 +15,20 @@ h2 {
   text-align: center;
   position: static;
 }
+h3 {
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+  text-align: center;
+}
+h4 {
+  font-family: Verdana;
+  font-size: 21px;
+  color: gray;
+  text-align: center;
+}
+h5 {
+  color: Gray;
+  text-align: right;
+}
